--- a/account.html
+++ b/account.html
@@ -53,54 +53,57 @@
       <div class="profile__background">
           <img class="profile__img" src="./img/webp/profil_picture_xs.webp" alt="Liekvinnan" width="150px">
       </div>
-      <section class="row col personal__info">
-        <h2>Anna Andersson</h2>
-        <h3>Tillf. Liekvinna</h3>
-        <ul>
-          <li>
-            <p>Döden AB</p>
-          </li>
-          <li>
-            <p>&#9993; <a href="mailto:liekvinnan@do.nu">liekvinnan@do.nu</a></p>
-          </li>
-          <li>
-            <p>Ålder: 347 år</p>
-          </li>
-        </ul>
-      </section>
-      <section class="row col presentation">
+        <section class="row col personal__info">
+          <h2>Anna Andersson</h2>
+          <h3>Tillf. Liekvinna</h3>
+          <ul>
+            <li>
+              <p>Döden AB</p>
+            </li>
+            <li>
+              <p>&#9993; <a href="mailto:liekvinnan@do.nu">liekvinnan@do.nu</a></p>
+            </li>
+            <li>
+              <p>Ålder: 347 år</p>
+            </li>
+          </ul>
+        </section>
         <hr class="divider">
-        <h3>Presentation</h3>
-        <p>Anna har lång erfarenhet av att ta hand om människor. Hon började redan för 260 år sedan och har under åren mött flera tusen personer i sitt yrke.
-        Arbetet innebär att Anna byggt upp både en stor social kompetens men också lärt sig ta hand om logistik. Arbetsbelastningen är emellanåt hög,
-        men det ger också en extra utmaning. I framtiden hoppas Anna bli utsedd till Officiell Liekvinna.</p>
-      </section>
-      <hr class="divider">
-      <section class="row col knowledge">
-        <h3>Kunskapsområden</h3>
-        <p>Huvudstyrkor</p>
-        <div class="knowledge__prog">
-          <label for="Logistik">Logistik</label>
-          <progress id="Logistik" value="89" max="100"> 89% </progress>
-          <label for="Sociala kunskaper">Sociala kunskaper</label>
-          <progress id="Sociala kunskaper" value="98" max="100"> 98% </progress>
-          <label for="Bokföring">Bokföring</label>
-          <progress id="Bokföring" value="72" max="100"> 72% </progress>
-          <label for="Marknadsföring">Marknadsföring</label>
-          <progress id="Marknadsföring" value="100" max="100"> 100% </progress>
-          <label for="Ledarskap">Ledarskap</label>
-          <progress id="Ledarskap" value="93" max="100"> 93% </progress>
-        </div>
-        <p>Andra styrkor</p>
-        <div class="knowledge__prog--secondary">
-          <label for="Problemlösning">Problemlösning</label>
-          <progress id="Problemlösning" value="70" max="100"> 70% </progress>
-          <label for="Samarbetsförmåga">Samarbetsförmåga</label>
-          <progress id="Samarbetsförmåga" value="67" max="100"> 67% </progress>
-          <label for="Statistik">Statistik</label>
-          <progress id="Statistik" value="71" max="100"> 71% </progress>
-        </div>
-      </section>
+        <div class="section__wrap">
+        <section class="row col presentation">
+          
+          <h3>Presentation</h3>
+          <p>Anna har lång erfarenhet av att ta hand om människor. Hon började redan för 260 år sedan och har under åren mött flera tusen personer i sitt yrke.
+          Arbetet innebär att Anna byggt upp både en stor social kompetens men också lärt sig ta hand om logistik. Arbetsbelastningen är emellanåt hög,
+          men det ger också en extra utmaning. I framtiden hoppas Anna bli utsedd till Officiell Liekvinna.</p>
+        </section>
+        <hr class="divider">
+        <section class="row col knowledge">
+          <h3>Kunskapsområden</h3>
+          <div class="knowledge__prog">
+            <p>Huvudstyrkor</p>
+            <label for="Logistik">Logistik</label>
+            <progress id="Logistik" value="89" max="100"> 89% </progress>
+            <label for="Sociala kunskaper">Sociala kunskaper</label>
+            <progress id="Sociala kunskaper" value="98" max="100"> 98% </progress>
+            <label for="Bokföring">Bokföring</label>
+            <progress id="Bokföring" value="72" max="100"> 72% </progress>
+            <label for="Marknadsföring">Marknadsföring</label>
+            <progress id="Marknadsföring" value="100" max="100"> 100% </progress>
+            <label for="Ledarskap">Ledarskap</label>
+            <progress id="Ledarskap" value="93" max="100"> 93% </progress>
+          </div>
+          <div class="knowledge__prog">
+            <p>Andra styrkor</p>
+            <label for="Problemlösning">Problemlösning</label>
+            <progress id="Problemlösning" value="70" max="100"> 70% </progress>
+            <label for="Samarbetsförmåga">Samarbetsförmåga</label>
+            <progress id="Samarbetsförmåga" value="67" max="100"> 67% </progress>
+            <label for="Statistik">Statistik</label>
+            <progress id="Statistik" value="71" max="100"> 71% </progress>
+          </div>
+        </section>
+      </div>
       <hr class="divider">
       <section class="row col responsibilities">
         <table  class="table">
