--- a/account.html
+++ b/account.html
@@ -1,81 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>ProScope - Account</title>
-    <meta name="description" content="This text will quite often be displayed beneath the page name in the search results" />
+    <meta
+      name="description"
+      content="This text will quite often be displayed beneath the page name in the search results"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="./pro_scope.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      sizes="16x16 32x32"
+      href="./pro_scope.ico"
+    />
     <link rel="stylesheet" href="./styles/abstracts/variables.css" />
     <link rel="stylesheet" href="./styles/base/base.css" />
     <link rel="stylesheet" href="./styles/layout/layout.css" />
     <link rel="stylesheet" href="./styles/pages/account.css" />
-    <script src="https://kit.fontawesome.com/0cb12500ed.js" crossorigin="anonymous"></script>
-</head>
+    <script
+      src="https://kit.fontawesome.com/0cb12500ed.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <h1 class="header__headline">ProScope</h1>
-        <img class="header__logo" src="./img/svg/logo.svg" alt="" />
-        <nav class="container-fluid row nav" role="navigation">
-            <div class="col-6 row">
-                <a href="./home.html" class="nav__link">
-                    <span class="link__text">ProScope</span>
-                    <img class="link__symbol" src="./img/svg/logo_symbol.svg" alt="" />
-                </a>
-                <a href="./members.html" class="nav__link">
-                    <span class="link__text">Members</span>
-                    <i class="link__symbol fas fa-users fa-2x"></i>
-                </a>
-                <a href="./statistics.html" class="nav__link">
-                    <span class="link__text">Statistics</span>
-                    <i class="link__symbol fas fa-chart-pie fa-2x"></i>
-                </a>
-            </div>
-            <div class="col-6 end row">
-                <a href="./account.html" class="nav__link nav__link--current">
-                    <span class="link__text">Account</span>
-                    <i class="link__symbol fas fa-id-card fa-2x"></i>
-                </a>
-                <a href="./register.html" class="nav__link">
-                    <span class="link__text">Register</span>
-                    <i class="link__symbol fas fa-user-plus fa-2x"></i>
-                </a>
-                <a href="./login.html" class="nav__link">
-                    <span class="link__text">Log in</span
+      <h1 class="header__headline">ProScope</h1>
+      <img class="header__logo" src="./img/svg/logo.svg" alt="" />
+      <nav class="container-fluid row nav" role="navigation">
+        <div class="col-6 row">
+          <a href="./home.html" class="nav__link">
+            <span class="link__text">ProScope</span>
+            <img class="link__symbol" src="./img/svg/logo_symbol.svg" alt="" />
+          </a>
+          <a href="./members.html" class="nav__link">
+            <span class="link__text">Members</span>
+            <i class="link__symbol fas fa-users fa-2x"></i>
+          </a>
+          <a href="./statistics.html" class="nav__link">
+            <span class="link__text">Statistics</span>
+            <i class="link__symbol fas fa-chart-pie fa-2x"></i>
+          </a>
+        </div>
+        <div class="col-6 end row">
+          <a href="./account.html" class="nav__link nav__link--current">
+            <span class="link__text">Account</span>
+            <i class="link__symbol fas fa-id-card fa-2x"></i>
+          </a>
+          <a href="./register.html" class="nav__link">
+            <span class="link__text">Register</span>
+            <i class="link__symbol fas fa-user-plus fa-2x"></i>
+          </a>
+          <a href="./login.html" class="nav__link">
+            <span class="link__text">Log in</span
             ><i class="link__symbol fas fa-sign-in-alt fa-2x"></i>
           </a>
         </div>
       </nav>
     </header>
-    <main role="main" class="container-fluid profile"> <!--JOBBA ENDAST INOM 'main'-->
+    <main role="main" class="container-fluid profile">
+      <!--JOBBA ENDAST INOM 'main'-->
       <div class="profile__background">
-          <img class="profile__img" src="./img/webp/profil_picture_xs.webp" alt="Liekvinnan" width="150px">
+        <img
+          class="profile__img"
+          src="./img/webp/profil_picture_xs.webp"
+          alt="Liekvinnan"
+          width="150px"
+        />
       </div>
-        <section class="row col personal__info">
-          <h2>Anna Andersson</h2>
-          <h3>Tillf. Liekvinna</h3>
-          <ul>
-            <li>
-              <p>Döden AB</p>
-            </li>
-            <li>
-              <p>&#9993; <a href="mailto:liekvinnan@do.nu">liekvinnan@do.nu</a></p>
-            </li>
-            <li>
-              <p>Ålder: 347 år</p>
-            </li>
-          </ul>
-        </section>
-        <hr class="divider">
-        <div class="section__wrap">
+      <section class="row col personal__info">
+        <h2>Anna Andersson</h2>
+        <h3>Tillf. Liekvinna</h3>
+        <ul>
+          <li>
+            <p>Döden AB</p>
+          </li>
+          <li>
+            <p>
+              &#9993; <a href="mailto:liekvinnan@do.nu">liekvinnan@do.nu</a>
+            </p>
+          </li>
+          <li>
+            <p>Ålder: 347 år</p>
+          </li>
+        </ul>
+      </section>
+      <hr class="divider">
+      <div class="section__wrap">
         <section class="row col presentation">
-          
           <h3>Presentation</h3>
-          <p>Anna har lång erfarenhet av att ta hand om människor. Hon började redan för 260 år sedan och har under åren mött flera tusen personer i sitt yrke.
-          Arbetet innebär att Anna byggt upp både en stor social kompetens men också lärt sig ta hand om logistik. Arbetsbelastningen är emellanåt hög,
-          men det ger också en extra utmaning. I framtiden hoppas Anna bli utsedd till Officiell Liekvinna.</p>
+          <p>
+            Anna har lång erfarenhet av att ta hand om människor. Hon började
+            redan för 260 år sedan och har under åren mött flera tusen personer
+            i sitt yrke. Arbetet innebär att Anna byggt upp både en stor social
+            kompetens men också lärt sig ta hand om logistik. Arbetsbelastningen
+            är emellanåt hög, men det ger också en extra utmaning. I framtiden
+            hoppas Anna bli utsedd till Officiell Liekvinna.
+          </p>
         </section>
         <hr class="divider">
         <section class="row col knowledge">
@@ -83,170 +105,172 @@
           <div class="knowledge__prog">
             <p>Huvudstyrkor</p>
             <label for="Logistik">Logistik</label>
-            <progress id="Logistik" value="89" max="100"> 89% </progress>
+            <progress id="Logistik" value="89" max="100">89%</progress>
             <label for="Sociala kunskaper">Sociala kunskaper</label>
-            <progress id="Sociala kunskaper" value="98" max="100"> 98% </progress>
+            <progress id="Sociala kunskaper" value="98" max="100">98%</progress>
             <label for="Bokföring">Bokföring</label>
-            <progress id="Bokföring" value="72" max="100"> 72% </progress>
+            <progress id="Bokföring" value="72" max="100">72%</progress>
             <label for="Marknadsföring">Marknadsföring</label>
-            <progress id="Marknadsföring" value="100" max="100"> 100% </progress>
+            <progress id="Marknadsföring" value="100" max="100">100%</progress>
             <label for="Ledarskap">Ledarskap</label>
-            <progress id="Ledarskap" value="93" max="100"> 93% </progress>
+            <progress id="Ledarskap" value="93" max="100">93%</progress>
           </div>
           <div class="knowledge__prog">
             <p>Andra styrkor</p>
             <label for="Problemlösning">Problemlösning</label>
-            <progress id="Problemlösning" value="70" max="100"> 70% </progress>
+            <progress id="Problemlösning" value="70" max="100">70%</progress>
             <label for="Samarbetsförmåga">Samarbetsförmåga</label>
-            <progress id="Samarbetsförmåga" value="67" max="100"> 67% </progress>
+            <progress id="Samarbetsförmåga" value="67" max="100">67%</progress>
             <label for="Statistik">Statistik</label>
-            <progress id="Statistik" value="71" max="100"> 71% </progress>
+            <progress id="Statistik" value="71" max="100">71%</progress>
           </div>
         </section>
       </div>
       <hr class="divider">
       <section class="row col responsibilities">
-        <table  class="table">
-          <caption><h3>Ansvarsområden</h3></caption>
+        <table class="table">
+          <caption>
+            <h3>Ansvarsområden</h3>
+          </caption>
           <thead>
-              <tr>
-                  <th>Kurskod</th>
-                  <th>Kursnamn</th>
-                  <th><abbr title="Period">Per.</abbr></th>
-                  <th>Roll</th>
-                  <th>SY</th>
-                  <th>IT</th>
-                  <th>ID</th>
-                  <th>GD</th>
-              </tr>
+            <tr>
+              <th>Kurskod</th>
+              <th>Kursnamn</th>
+              <th><abbr title="Period">Per.</abbr></th>
+              <th>Roll</th>
+              <th>SY</th>
+              <th>IT</th>
+              <th>ID</th>
+              <th>GD</th>
+            </tr>
           </thead>
           <tbody>
-              <tr>
-                  <td>GIK26C</td>
-                  <td>Kollaborativ design</td>
-                  <td>P1</td>
-                  <td><abbr title="Ansvarig">Ansv</abbr></td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-                  <td>Ja</td>
-              </tr>
-              <tr>
-                  <td>GIK298</td>
-                  <td>Data- och informationshantering</td>
-                  <td>P1</td>
-                  <td> <abbr title="Lärare">Lär</abbr> </td>
-                  <td>Ja</td>
-                  <td>Ja</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-              </tr>
-              <tr>
-                  <td>GIK297</td>
-                  <td>Responsiv webbdesign</td>
-                  <td>P2</td>
-                  <td><abbr title="Ansvarig">Ansv</abbr></td>
-                  <td>Ja</td>
-                  <td>Ja</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-              </tr>
-              <tr>
-                  <td>GIK2F5</td>
-                  <td>Digital bild</td>
-                  <td>P2</td>
-                  <td><abbr title="Ansvarig">Ansv</abbr></td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-              </tr>
-              <tr>
-                  <td>GIK2F8</td>
-                  <td>Dynamiska webbapplikationer</td>
-                  <td>P2</td>
-                  <td><abbr title="Lärare">Lär</abbr></td>
-                  <td>Ja</td>
-                  <td>Ja</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-              </tr>
+            <tr>
+              <td>GIK26C</td>
+              <td>Kollaborativ design</td>
+              <td>P1</td>
+              <td><abbr title="Ansvarig">Ansv</abbr></td>
+              <td>Nej</td>
+              <td>Nej</td>
+              <td>Nej</td>
+              <td>Ja</td>
+            </tr>
+            <tr>
+              <td>GIK298</td>
+              <td>Data- och informationshantering</td>
+              <td>P1</td>
+              <td><abbr title="Lärare">Lär</abbr></td>
+              <td>Ja</td>
+              <td>Ja</td>
+              <td>Ja</td>
+              <td>Nej</td>
+            </tr>
+            <tr>
+              <td>GIK297</td>
+              <td>Responsiv webbdesign</td>
+              <td>P2</td>
+              <td><abbr title="Ansvarig">Ansv</abbr></td>
+              <td>Ja</td>
+              <td>Ja</td>
+              <td>Ja</td>
+              <td>Nej</td>
+            </tr>
+            <tr>
+              <td>GIK2F5</td>
+              <td>Digital bild</td>
+              <td>P2</td>
+              <td><abbr title="Ansvarig">Ansv</abbr></td>
+              <td>Nej</td>
+              <td>Nej</td>
+              <td>Ja</td>
+              <td>Nej</td>
+            </tr>
+            <tr>
+              <td>GIK2F8</td>
+              <td>Dynamiska webbapplikationer</td>
+              <td>P2</td>
+              <td><abbr title="Lärare">Lär</abbr></td>
+              <td>Ja</td>
+              <td>Ja</td>
+              <td>Ja</td>
+              <td>Nej</td>
+            </tr>
 
-              <tr>
-                  <td>GIK2H8</td>
-                  <td>Användarcentrerad design</td>
-                  <td>P3</td>
-                  <td><abbr title="Lärare">Lär</abbr></td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-              </tr>
+            <tr>
+              <td>GIK2H8</td>
+              <td>Användarcentrerad design</td>
+              <td>P3</td>
+              <td><abbr title="Lärare">Lär</abbr></td>
+              <td>Nej</td>
+              <td>Nej</td>
+              <td>Ja</td>
+              <td>Nej</td>
+            </tr>
 
-              <tr>
-                  <td>GIK2BD</td>
-                  <td>IT-projekthantering</td>
-                  <td>P3</td>
-                  <td><abbr title="Lärare">Lär</abbr></td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-              </tr>
+            <tr>
+              <td>GIK2BD</td>
+              <td>IT-projekthantering</td>
+              <td>P3</td>
+              <td><abbr title="Lärare">Lär</abbr></td>
+              <td>Ja</td>
+              <td>Nej</td>
+              <td>Nej</td>
+              <td>Nej</td>
+            </tr>
 
-              <tr>
-                  <td>GIK2H9</td>
-                  <td>Design av webbapplikationer</td>
-                  <td>P3</td>
-                  <td><abbr title="Ansvarig">Ans.</abbr></td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-              </tr>
-              <tr>
-                  <td>GIK2JL</td>
-                  <td>Informationsdesign</td>
-                  <td>P4</td>
-                  <td><abbr title="Ansvarig">Ans.</abbr></td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-              </tr>
-              <tr>
-                  <td>GIK2TS</td>
-                  <td rowspan="3">Examensarbete</td>
-                  <td>P3-P4</td>
-                  <td><abbr title="Handledare">Handl.</abbr></td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-              </tr>
-              <tr>
-                  <td>GMI2C8</td>
-                  <td>P4</td>
-                  <td><abbr title="Handledare">Handl.</abbr></td>
-                  <td>Nej</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-              </tr>
-              <tr>
-                  <td>GMI28T</td>
-                  <td>P4</td>
-                  <td><abbr title="Handledare">Handl.</abbr></td>
-                  <td>Nej</td>
-                  <td>Ja</td>
-                  <td>Nej</td>
-                  <td>Nej</td>
-              </tr>
+            <tr>
+              <td>GIK2H9</td>
+              <td>Design av webbapplikationer</td>
+              <td>P3</td>
+              <td><abbr title="Ansvarig">Ans.</abbr></td>
+              <td>Ja</td>
+              <td>Nej</td>
+              <td>Nej</td>
+              <td>Nej</td>
+            </tr>
+            <tr>
+              <td>GIK2JL</td>
+              <td>Informationsdesign</td>
+              <td>P4</td>
+              <td><abbr title="Ansvarig">Ans.</abbr></td>
+              <td>Nej</td>
+              <td>Nej</td>
+              <td>Ja</td>
+              <td>Nej</td>
+            </tr>
+            <tr>
+              <td>GIK2TS</td>
+              <td rowspan="3">Examensarbete</td>
+              <td>P3-P4</td>
+              <td><abbr title="Handledare">Handl.</abbr></td>
+              <td>Nej</td>
+              <td>Nej</td>
+              <td>Ja</td>
+              <td>Nej</td>
+            </tr>
+            <tr>
+              <td>GMI2C8</td>
+              <td>P4</td>
+              <td><abbr title="Handledare">Handl.</abbr></td>
+              <td>Nej</td>
+              <td>Ja</td>
+              <td>Nej</td>
+              <td>Nej</td>
+            </tr>
+            <tr>
+              <td>GMI28T</td>
+              <td>P4</td>
+              <td><abbr title="Handledare">Handl.</abbr></td>
+              <td>Nej</td>
+              <td>Ja</td>
+              <td>Nej</td>
+              <td>Nej</td>
+            </tr>
           </tbody>
-
-      </table>
+        </table>
       </section>
-    </main> <!--JOBBA ENDAST INOM 'main'-->
+    </main>
+    <!--JOBBA ENDAST INOM 'main'-->
     <footer class="page-footer pt-5 mt-5">
       <div class="container-fluid row around start-lg">
         <div class="col-12 mv-4 col-md-8 row around start-md">
