More BEM things!

--- a/account.html
+++ b/account.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <title>ProScope - Account</title>
-    <meta
-      name="description"
-      content="This text will quite often be displayed beneath the page name in the search results"
-    />
+    <meta name="description" content="This text will quite often be displayed beneath the page name in the search results" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      sizes="16x16 32x32"
-      href="./pro_scope.ico"
-    />
+    <link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="./pro_scope.ico" />
     <link rel="stylesheet" href="./styles/abstracts/variables.css" />
     <link rel="stylesheet" href="./styles/base/base.css" />
     <link rel="stylesheet" href="./styles/layout/layout.css" />
     <link rel="stylesheet" href="./styles/pages/account.css" />
-    <script
-      src="https://kit.fontawesome.com/0cb12500ed.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+    <link rel="stylesheet" href="./styles/components/tables.css" />
+    <link rel="stylesheet" href="./styles/components/divider.css" />
+    <link rel="stylesheet" href="./styles/components/knowledge.css" />
+    <link rel="stylesheet" href="./styles/components/personal.css" />
+    <link rel="stylesheet" href="./styles/components/presentation.css" />
+    <link rel="stylesheet" href="./styles/components/profile.css" />
+    <link rel="stylesheet" href="./styles/components/section.css" />
+    <script src="https://kit.fontawesome.com/0cb12500ed.js" crossorigin="anonymous"></script>
+</head>
 
-  <body>
+<body>
     <header class="header">
-      <h1 class="header__headline">ProScope</h1>
-      <img class="header__logo" src="./img/svg/logo.svg" alt="" />
-      <nav class="container-fluid row nav" role="navigation">
-        <div class="col-6 row">
-          <a href="./home.html" class="nav__link">
-            <span class="link__text">ProScope</span>
-            <img class="link__symbol" src="./img/svg/logo_symbol.svg" alt="" />
-          </a>
-          <a href="./members.html" class="nav__link">
-            <span class="link__text">Members</span>
-            <i class="link__symbol fas fa-users fa-2x"></i>
-          </a>
-          <a href="./statistics.html" class="nav__link">
-            <span class="link__text">Statistics</span>
-            <i class="link__symbol fas fa-chart-pie fa-2x"></i>
-          </a>
-        </div>
-        <div class="col-6 end row">
-          <a href="./account.html" class="nav__link nav__link--current">
-            <span class="link__text">Account</span>
-            <i class="link__symbol fas fa-id-card fa-2x"></i>
-          </a>
-          <a href="./register.html" class="nav__link">
-            <span class="link__text">Register</span>
-            <i class="link__symbol fas fa-user-plus fa-2x"></i>
-          </a>
-          <a href="./login.html" class="nav__link">
-            <span class="link__text">Log in</span
+        <h1 class="header__headline">ProScope</h1>
+        <img class="header__logo" src="./img/svg/logo.svg" alt="" />
+        <nav class="container-fluid row nav" role="navigation">
+            <div class="col-6 row">
+                <a href="./home.html" class="nav__link">
+                    <span class="link__text">ProScope</span>
+                    <img class="link__symbol" src="./img/svg/logo_symbol.svg" alt="" />
+                </a>
+                <a href="./members.html" class="nav__link">
+                    <span class="link__text">Members</span>
+                    <i class="link__symbol fas fa-users fa-2x"></i>
+                </a>
+                <a href="./statistics.html" class="nav__link">
+                    <span class="link__text">Statistics</span>
+                    <i class="link__symbol fas fa-chart-pie fa-2x"></i>
+                </a>
+            </div>
+            <div class="col-6 end row">
+                <a href="./account.html" class="nav__link nav__link--current">
+                    <span class="link__text">Account</span>
+                    <i class="link__symbol fas fa-id-card fa-2x"></i>
+                </a>
+                <a href="./register.html" class="nav__link">
+                    <span class="link__text">Register</span>
+                    <i class="link__symbol fas fa-user-plus fa-2x"></i>
+                </a>
+                <a href="./login.html" class="nav__link">
+                    <span class="link__text">Log in</span
             ><i class="link__symbol fas fa-sign-in-alt fa-2x"></i>
           </a>
         </div>
@@ -127,8 +124,8 @@
         </section>
       </div>
       <hr class="divider">
-      <section class="row col responsibilities">
-        <table class="table">
+      <section class="row col table__specifier">
+        <table class="table__responsibilities">
           <caption>
             <h3>Ansvarsområden</h3>
           </caption>
