tables Examensarbete td tag now works

--- a/account.html
+++ b/account.html
@@ -135,7 +135,7 @@
                     <tr>
                         <th>Kurskod</th>
                         <th>Kursnamn</th>
-                        <th><abbr title="Period">Per.</abbr></th>
+                        <th>Period</th>
                         <th>Roll</th>
                         <th>SY</th>
                         <th>IT</th>
@@ -148,7 +148,7 @@
                         <td>GIK26C</td>
                         <td>Kollaborativ design</td>
                         <td>P1</td>
-                        <td><abbr title="Ansvarig">Ansv</abbr></td>
+                        <td>Ansvarig</td>
                         <td>Nej</td>
                         <td>Nej</td>
                         <td>Nej</td>
@@ -158,7 +158,7 @@
                         <td>GIK298</td>
                         <td>Data- och informationshantering</td>
                         <td>P1</td>
-                        <td><abbr title="Lärare">Lär</abbr></td>
+                        <td>Lärare</td>
                         <td>Ja</td>
                         <td>Ja</td>
                         <td>Ja</td>
@@ -168,7 +168,7 @@
                         <td>GIK297</td>
                         <td>Responsiv webbdesign</td>
                         <td>P2</td>
-                        <td><abbr title="Ansvarig">Ansv</abbr></td>
+                        <td>Ansvarig</td>
                         <td>Ja</td>
                         <td>Ja</td>
                         <td>Ja</td>
@@ -178,7 +178,7 @@
                         <td>GIK2F5</td>
                         <td>Digital bild</td>
                         <td>P2</td>
-                        <td><abbr title="Ansvarig">Ansv</abbr></td>
+                        <td>Ansvarig</td>
                         <td>Nej</td>
                         <td>Nej</td>
                         <td>Ja</td>
@@ -188,7 +188,7 @@
                         <td>GIK2F8</td>
                         <td>Dynamiska webbapplikationer</td>
                         <td>P2</td>
-                        <td><abbr title="Lärare">Lär</abbr></td>
+                        <td>Lärare</td>
                         <td>Ja</td>
                         <td>Ja</td>
                         <td>Ja</td>
@@ -199,7 +199,7 @@
                         <td>GIK2H8</td>
                         <td>Användarcentrerad design</td>
                         <td>P3</td>
-                        <td><abbr title="Lärare">Lär</abbr></td>
+                        <td>Lärare</td>
                         <td>Nej</td>
                         <td>Nej</td>
                         <td>Ja</td>
@@ -210,7 +210,7 @@
                         <td>GIK2BD</td>
                         <td>IT-projekthantering</td>
                         <td>P3</td>
-                        <td><abbr title="Lärare">Lär</abbr></td>
+                        <td>Lärare</td>
                         <td>Ja</td>
                         <td>Nej</td>
                         <td>Nej</td>
@@ -221,7 +221,7 @@
                         <td>GIK2H9</td>
                         <td>Design av webbapplikationer</td>
                         <td>P3</td>
-                        <td><abbr title="Ansvarig">Ans.</abbr></td>
+                        <td>Ansvarig</td>
                         <td>Ja</td>
                         <td>Nej</td>
                         <td>Nej</td>
@@ -231,7 +231,7 @@
                         <td>GIK2JL</td>
                         <td>Informationsdesign</td>
                         <td>P4</td>
-                        <td><abbr title="Ansvarig">Ans.</abbr></td>
+                        <td>Ansvarig</td>
                         <td>Nej</td>
                         <td>Nej</td>
                         <td>Ja</td>
@@ -241,7 +241,7 @@
                         <td>GIK2TS</td>
                         <td rowspan="3">Examensarbete</td>
                         <td>P3-P4</td>
-                        <td><abbr title="Handledare">Handl.</abbr></td>
+                        <td>Handledare</td>
                         <td>Nej</td>
                         <td>Nej</td>
                         <td>Ja</td>
@@ -249,12 +249,9 @@
                     </tr>
                     <tr>
                         <td>GMI2C8</td>
-                        <!-- <td class="table__hiddentd"></td> -->
-                        <td class="table__hiddentd">
-                            Examensarbete
-                        </td>
+                        <td class="table__mobilevisible">Examensarbete</td>
                         <td>P4</td>
-                        <td><abbr title="Handledare">Handl.</abbr></td>
+                        <td>Handledare</td>
                         <td>Nej</td>
                         <td>Ja</td>
                         <td>Nej</td>
@@ -262,12 +259,9 @@
                     </tr>
                     <tr>
                         <td>GMI28T</td>
-                        <!--<td class="table__hiddentd"></td>-->
-                        <td class="table__hiddentd">
-                            Examensarbete
-                        </td>
+                        <td class="table__mobilevisible">Examensarbete</td>
                         <td>P4</td>
-                        <td><abbr title="Handledare">Handl.</abbr></td>
+                        <td>Handledare</td>
                         <td>Nej</td>
                         <td>Ja</td>
                         <td>Nej</td>
